--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 <body>
 	<div class="wrapper">
 		<header>
+			<div class="container">
+
+				<img src="img/fort.jpg" alt="logo" class="logo">
+
+				<nav class="menu">
+					<ul class="nama">
+						<li><a href="https://www.netflix.com/id/title/80014749" target="_blank">WATCH HERE!</a></li>
+						<li><a href="https://en.wikipedia.org/wiki/Rick_and_Morty" target="_blank">WIKIPEDIA</a></li>
+						<li><a href="https://www.amazon.com/s/ref=nb_sb_noss/135-7339581-9005832?url=search-alias%3Daps&field-keywords=rick+and+morty" target="_blank">STORE/SHOP</a></li>
+					</ul>
+				</nav>
+
+			</div>
+				
 			<img src="img/profile.jpg">
 			<h1>Rick and Morty</h1>
 		</header>
